// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsScreen should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SettingsScreen
    onCreateLeaderboard={[MockFunction]}
    onPressClose={[MockFunction]}
    sections={
      Array [
        Object {
          "isVisible": true,
          "items": Array [
            Object {
              "active": false,
              "available": true,
              "id": "99999904",
              "key": "streakSaver",
              "name": "Streak saver",
              "onSwitchPress": [MockFunction],
              "onTimePress": [MockFunction],
              "time": "17:00",
            },
          ],
          "name": "notifications",
        },
        Object {
          "isVisible": true,
          "items": Array [
            Object {
              "isConnected": false,
              "isLoading": false,
              "name": "fitbit",
              "onPress": [MockFunction],
            },
          ],
          "name": "connections",
        },
        Object {
          "isVisible": true,
          "items": Array [
            Object {
              "isLoading": false,
              "name": "klsdfjlaskdjf",
              "onPress": [MockFunction],
              "status": "active",
            },
          ],
          "name": "leaderboard",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <GenericHeading
          heading="settings"
          hidesBorder={true}
        />,
        <ScrollViewMock
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <SectionHeading
              heading="notifications"
            />
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginHorizontal": 30,
                  "marginTop": 30,
                }
              }
            >
              <NotificationsItem
                active={false}
                available={true}
                id="99999904"
                name="Streak saver"
                onSwitchPress={[MockFunction]}
                onTimePress={[MockFunction]}
                time="17:00"
              />
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <SectionHeading
              heading="connections"
            />
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginHorizontal": 30,
                  "marginTop": 30,
                }
              }
            >
              <ConnectionsItem
                isConnected={false}
                isLoading={false}
                name="fitbit"
                onPress={[MockFunction]}
              />
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <SectionHeading
              heading="leaderboard"
            />
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "center",
                  "marginTop": 30,
                  "paddingHorizontal": 80,
                }
              }
            >
              <LeaderboardItem
                isLoading={false}
                name="klsdfjlaskdjf"
                onPress={[MockFunction]}
                status="active"
              />
            </View>
          </View>
        </ScrollViewMock>,
        <Close
          onPress={[MockFunction]}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
      "testID": "SETTINGS_SCREEN",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "heading": "settings",
          "hidesBorder": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="notifications"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <NotificationsItem
                  active={false}
                  available={true}
                  id="99999904"
                  name="Streak saver"
                  onSwitchPress={[MockFunction]}
                  onTimePress={[MockFunction]}
                  time="17:00"
                />
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="connections"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <ConnectionsItem
                  isConnected={false}
                  isLoading={false}
                  name="fitbit"
                  onPress={[MockFunction]}
                />
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="leaderboard"
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                    "marginTop": 30,
                    "paddingHorizontal": 80,
                  }
                }
              >
                <LeaderboardItem
                  isLoading={false}
                  name="klsdfjlaskdjf"
                  onPress={[MockFunction]}
                  status="active"
                />
              </View>
            </View>,
          ],
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <SectionHeading
                  heading="notifications"
                />,
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <NotificationsItem
                    active={false}
                    available={true}
                    id="99999904"
                    name="Streak saver"
                    onSwitchPress={[MockFunction]}
                    onTimePress={[MockFunction]}
                    time="17:00"
                  />
                </View>,
              ],
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "heading": "notifications",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <NotificationsItem
                      active={false}
                      available={true}
                      id="99999904"
                      name="Streak saver"
                      onSwitchPress={[MockFunction]}
                      onTimePress={[MockFunction]}
                      time="17:00"
                    />,
                  ],
                  "style": Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "function",
                    "props": Object {
                      "active": false,
                      "available": true,
                      "id": "99999904",
                      "name": "Streak saver",
                      "onSwitchPress": [MockFunction],
                      "onTimePress": [MockFunction],
                      "time": "17:00",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <SectionHeading
                  heading="connections"
                />,
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <ConnectionsItem
                    isConnected={false}
                    isLoading={false}
                    name="fitbit"
                    onPress={[MockFunction]}
                  />
                </View>,
              ],
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "heading": "connections",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <ConnectionsItem
                      isConnected={false}
                      isLoading={false}
                      name="fitbit"
                      onPress={[MockFunction]}
                    />,
                  ],
                  "style": Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "function",
                    "props": Object {
                      "isConnected": false,
                      "isLoading": false,
                      "name": "fitbit",
                      "onPress": [MockFunction],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <SectionHeading
                  heading="leaderboard"
                />,
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "flexWrap": "wrap",
                      "justifyContent": "center",
                      "marginTop": 30,
                      "paddingHorizontal": 80,
                    }
                  }
                >
                  <LeaderboardItem
                    isLoading={false}
                    name="klsdfjlaskdjf"
                    onPress={[MockFunction]}
                    status="active"
                  />
                </View>,
              ],
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "heading": "leaderboard",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <LeaderboardItem
                      isLoading={false}
                      name="klsdfjlaskdjf"
                      onPress={[MockFunction]}
                      status="active"
                    />,
                  ],
                  "style": Object {
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                    "marginTop": 30,
                    "paddingHorizontal": 80,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "function",
                    "props": Object {
                      "isLoading": false,
                      "name": "klsdfjlaskdjf",
                      "onPress": [MockFunction],
                      "status": "active",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <GenericHeading
            heading="settings"
            hidesBorder={true}
          />,
          <ScrollViewMock
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="notifications"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <NotificationsItem
                  active={false}
                  available={true}
                  id="99999904"
                  name="Streak saver"
                  onSwitchPress={[MockFunction]}
                  onTimePress={[MockFunction]}
                  time="17:00"
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="connections"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <ConnectionsItem
                  isConnected={false}
                  isLoading={false}
                  name="fitbit"
                  onPress={[MockFunction]}
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="leaderboard"
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                    "marginTop": 30,
                    "paddingHorizontal": 80,
                  }
                }
              >
                <LeaderboardItem
                  isLoading={false}
                  name="klsdfjlaskdjf"
                  onPress={[MockFunction]}
                  status="active"
                />
              </View>
            </View>
          </ScrollViewMock>,
          <Close
            onPress={[MockFunction]}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
        "testID": "SETTINGS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "heading": "settings",
            "hidesBorder": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <SectionHeading
                  heading="notifications"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <NotificationsItem
                    active={false}
                    available={true}
                    id="99999904"
                    name="Streak saver"
                    onSwitchPress={[MockFunction]}
                    onTimePress={[MockFunction]}
                    time="17:00"
                  />
                </View>
              </View>,
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <SectionHeading
                  heading="connections"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <ConnectionsItem
                    isConnected={false}
                    isLoading={false}
                    name="fitbit"
                    onPress={[MockFunction]}
                  />
                </View>
              </View>,
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <SectionHeading
                  heading="leaderboard"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "flexWrap": "wrap",
                      "justifyContent": "center",
                      "marginTop": 30,
                      "paddingHorizontal": 80,
                    }
                  }
                >
                  <LeaderboardItem
                    isLoading={false}
                    name="klsdfjlaskdjf"
                    onPress={[MockFunction]}
                    status="active"
                  />
                </View>
              </View>,
            ],
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <SectionHeading
                    heading="notifications"
                  />,
                  <View
                    style={
                      Object {
                        "flexDirection": "column",
                        "justifyContent": "center",
                        "marginHorizontal": 30,
                        "marginTop": 30,
                      }
                    }
                  >
                    <NotificationsItem
                      active={false}
                      available={true}
                      id="99999904"
                      name="Streak saver"
                      onSwitchPress={[MockFunction]}
                      onTimePress={[MockFunction]}
                      time="17:00"
                    />
                  </View>,
                ],
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "heading": "notifications",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <NotificationsItem
                        active={false}
                        available={true}
                        id="99999904"
                        name="Streak saver"
                        onSwitchPress={[MockFunction]}
                        onTimePress={[MockFunction]}
                        time="17:00"
                      />,
                    ],
                    "style": Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "0",
                      "nodeType": "function",
                      "props": Object {
                        "active": false,
                        "available": true,
                        "id": "99999904",
                        "name": "Streak saver",
                        "onSwitchPress": [MockFunction],
                        "onTimePress": [MockFunction],
                        "time": "17:00",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <SectionHeading
                    heading="connections"
                  />,
                  <View
                    style={
                      Object {
                        "flexDirection": "column",
                        "justifyContent": "center",
                        "marginHorizontal": 30,
                        "marginTop": 30,
                      }
                    }
                  >
                    <ConnectionsItem
                      isConnected={false}
                      isLoading={false}
                      name="fitbit"
                      onPress={[MockFunction]}
                    />
                  </View>,
                ],
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "heading": "connections",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <ConnectionsItem
                        isConnected={false}
                        isLoading={false}
                        name="fitbit"
                        onPress={[MockFunction]}
                      />,
                    ],
                    "style": Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "0",
                      "nodeType": "function",
                      "props": Object {
                        "isConnected": false,
                        "isLoading": false,
                        "name": "fitbit",
                        "onPress": [MockFunction],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <SectionHeading
                    heading="leaderboard"
                  />,
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "center",
                        "marginTop": 30,
                        "paddingHorizontal": 80,
                      }
                    }
                  >
                    <LeaderboardItem
                      isLoading={false}
                      name="klsdfjlaskdjf"
                      onPress={[MockFunction]}
                      status="active"
                    />
                  </View>,
                ],
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "heading": "leaderboard",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <LeaderboardItem
                        isLoading={false}
                        name="klsdfjlaskdjf"
                        onPress={[MockFunction]}
                        status="active"
                      />,
                    ],
                    "style": Object {
                      "flexDirection": "row",
                      "flexWrap": "wrap",
                      "justifyContent": "center",
                      "marginTop": 30,
                      "paddingHorizontal": 80,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "0",
                      "nodeType": "function",
                      "props": Object {
                        "isLoading": false,
                        "name": "klsdfjlaskdjf",
                        "onPress": [MockFunction],
                        "status": "active",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [MockFunction],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`SettingsScreen should render without leaderboard section 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SettingsScreen
    onCreateLeaderboard={[MockFunction]}
    onPressClose={[MockFunction]}
    sections={
      Array [
        Object {
          "isVisible": true,
          "items": Array [
            Object {
              "active": false,
              "available": true,
              "id": "99999904",
              "key": "streakSaver",
              "name": "Streak saver",
              "onSwitchPress": [MockFunction],
              "onTimePress": [MockFunction],
              "time": "17:00",
            },
          ],
          "name": "notifications",
        },
        Object {
          "isVisible": true,
          "items": Array [
            Object {
              "isConnected": false,
              "isLoading": false,
              "name": "fitbit",
              "onPress": [MockFunction],
            },
          ],
          "name": "connections",
        },
        Object {
          "isVisible": false,
          "items": Array [
            Object {
              "isLoading": false,
              "name": "klsdfjlaskdjf",
              "onPress": [MockFunction],
              "status": "active",
            },
          ],
          "name": "leaderboard",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <GenericHeading
          heading="settings"
          hidesBorder={true}
        />,
        <ScrollViewMock
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <SectionHeading
              heading="notifications"
            />
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginHorizontal": 30,
                  "marginTop": 30,
                }
              }
            >
              <NotificationsItem
                active={false}
                available={true}
                id="99999904"
                name="Streak saver"
                onSwitchPress={[MockFunction]}
                onTimePress={[MockFunction]}
                time="17:00"
              />
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <SectionHeading
              heading="connections"
            />
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginHorizontal": 30,
                  "marginTop": 30,
                }
              }
            >
              <ConnectionsItem
                isConnected={false}
                isLoading={false}
                name="fitbit"
                onPress={[MockFunction]}
              />
            </View>
          </View>
        </ScrollViewMock>,
        <Close
          onPress={[MockFunction]}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
      "testID": "SETTINGS_SCREEN",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "heading": "settings",
          "hidesBorder": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="notifications"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <NotificationsItem
                  active={false}
                  available={true}
                  id="99999904"
                  name="Streak saver"
                  onSwitchPress={[MockFunction]}
                  onTimePress={[MockFunction]}
                  time="17:00"
                />
              </View>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="connections"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <ConnectionsItem
                  isConnected={false}
                  isLoading={false}
                  name="fitbit"
                  onPress={[MockFunction]}
                />
              </View>
            </View>,
            null,
          ],
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <SectionHeading
                  heading="notifications"
                />,
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <NotificationsItem
                    active={false}
                    available={true}
                    id="99999904"
                    name="Streak saver"
                    onSwitchPress={[MockFunction]}
                    onTimePress={[MockFunction]}
                    time="17:00"
                  />
                </View>,
              ],
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "heading": "notifications",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <NotificationsItem
                      active={false}
                      available={true}
                      id="99999904"
                      name="Streak saver"
                      onSwitchPress={[MockFunction]}
                      onTimePress={[MockFunction]}
                      time="17:00"
                    />,
                  ],
                  "style": Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "function",
                    "props": Object {
                      "active": false,
                      "available": true,
                      "id": "99999904",
                      "name": "Streak saver",
                      "onSwitchPress": [MockFunction],
                      "onTimePress": [MockFunction],
                      "time": "17:00",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <SectionHeading
                  heading="connections"
                />,
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <ConnectionsItem
                    isConnected={false}
                    isLoading={false}
                    name="fitbit"
                    onPress={[MockFunction]}
                  />
                </View>,
              ],
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "heading": "connections",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <ConnectionsItem
                      isConnected={false}
                      isLoading={false}
                      name="fitbit"
                      onPress={[MockFunction]}
                    />,
                  ],
                  "style": Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "function",
                    "props": Object {
                      "isConnected": false,
                      "isLoading": false,
                      "name": "fitbit",
                      "onPress": [MockFunction],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          null,
        ],
        "type": [MockFunction],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <GenericHeading
            heading="settings"
            hidesBorder={true}
          />,
          <ScrollViewMock
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="notifications"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <NotificationsItem
                  active={false}
                  available={true}
                  id="99999904"
                  name="Streak saver"
                  onSwitchPress={[MockFunction]}
                  onTimePress={[MockFunction]}
                  time="17:00"
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <SectionHeading
                heading="connections"
              />
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginHorizontal": 30,
                    "marginTop": 30,
                  }
                }
              >
                <ConnectionsItem
                  isConnected={false}
                  isLoading={false}
                  name="fitbit"
                  onPress={[MockFunction]}
                />
              </View>
            </View>
          </ScrollViewMock>,
          <Close
            onPress={[MockFunction]}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
        "testID": "SETTINGS_SCREEN",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "heading": "settings",
            "hidesBorder": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <SectionHeading
                  heading="notifications"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <NotificationsItem
                    active={false}
                    available={true}
                    id="99999904"
                    name="Streak saver"
                    onSwitchPress={[MockFunction]}
                    onTimePress={[MockFunction]}
                    time="17:00"
                  />
                </View>
              </View>,
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <SectionHeading
                  heading="connections"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    }
                  }
                >
                  <ConnectionsItem
                    isConnected={false}
                    isLoading={false}
                    name="fitbit"
                    onPress={[MockFunction]}
                  />
                </View>
              </View>,
              null,
            ],
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <SectionHeading
                    heading="notifications"
                  />,
                  <View
                    style={
                      Object {
                        "flexDirection": "column",
                        "justifyContent": "center",
                        "marginHorizontal": 30,
                        "marginTop": 30,
                      }
                    }
                  >
                    <NotificationsItem
                      active={false}
                      available={true}
                      id="99999904"
                      name="Streak saver"
                      onSwitchPress={[MockFunction]}
                      onTimePress={[MockFunction]}
                      time="17:00"
                    />
                  </View>,
                ],
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "heading": "notifications",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <NotificationsItem
                        active={false}
                        available={true}
                        id="99999904"
                        name="Streak saver"
                        onSwitchPress={[MockFunction]}
                        onTimePress={[MockFunction]}
                        time="17:00"
                      />,
                    ],
                    "style": Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "0",
                      "nodeType": "function",
                      "props": Object {
                        "active": false,
                        "available": true,
                        "id": "99999904",
                        "name": "Streak saver",
                        "onSwitchPress": [MockFunction],
                        "onTimePress": [MockFunction],
                        "time": "17:00",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <SectionHeading
                    heading="connections"
                  />,
                  <View
                    style={
                      Object {
                        "flexDirection": "column",
                        "justifyContent": "center",
                        "marginHorizontal": 30,
                        "marginTop": 30,
                      }
                    }
                  >
                    <ConnectionsItem
                      isConnected={false}
                      isLoading={false}
                      name="fitbit"
                      onPress={[MockFunction]}
                    />
                  </View>,
                ],
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "heading": "connections",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <ConnectionsItem
                        isConnected={false}
                        isLoading={false}
                        name="fitbit"
                        onPress={[MockFunction]}
                      />,
                    ],
                    "style": Object {
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "marginHorizontal": 30,
                      "marginTop": 30,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "0",
                      "nodeType": "function",
                      "props": Object {
                        "isConnected": false,
                        "isLoading": false,
                        "name": "fitbit",
                        "onPress": [MockFunction],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            null,
          ],
          "type": [MockFunction],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
